--- a/kawn_subscriptions_manager/templates/account/email_account_creation.html
+++ b/kawn_subscriptions_manager/templates/account/email_account_creation.html
@@ -190,8 +190,6 @@
                                     <fieldset>
                                       <legend>Your account details:</legend>
                                         <strong>Email: </strong> &nbsp;&nbsp;{{ email }} <br>
-                                        <strong>Username: </strong> &nbsp;&nbsp;{{ username }} <br>
-                                        <strong>Password: </strong> &nbsp;&nbsp;{{ password }} <br>
                                         <strong>Access: </strong> &nbsp;&nbsp;{{ access }}
                                     </fieldset>
                                   </span>
@@ -199,7 +197,7 @@
                                 <p style="font-size: 14px; line-height: 140%;">&nbsp;</p>
                                 <p style="font-size: 14px; line-height: 140%;">
                                   <span style="font-size: 18px; line-height: 25.2px; color: #666666;">
-                                    You can login to the website by clicking the button below: 
+                                    You can set your password by clicking the button below: 
                                   </span>
                                 </p>
                               </div>
@@ -214,9 +212,9 @@
                           <tr>
                             <td style="overflow-wrap:break-word;word-break:break-word;padding:0px 40px;font-family:'Lato',sans-serif;" align="left">
                               <div align="left">
-                                <a href="http://localhost:8000" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Lato',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #18163a; border-radius: 1px;-webkit-border-radius: 1px; -moz-border-radius: 1px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;">
+                                <a href="http://localhost:8000/accounts/password/reset/" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Lato',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #18163a; border-radius: 1px;-webkit-border-radius: 1px; -moz-border-radius: 1px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;">
                                   <span style="display:block;padding:15px 40px;line-height:120%;">
-                                    <span style="font-size: 18px; line-height: 21.6px;">Login</span>
+                                    <span style="font-size: 18px; line-height: 21.6px;">Set Password</span>
                                   </span>
                                 </a>
                               </div>
