--- a/kawn_subscriptions_manager/templates/clients/list_outlet_client.html
+++ b/kawn_subscriptions_manager/templates/clients/list_outlet_client.html
@@ -3,6 +3,18 @@
 {% block menu-title %}List Outlet Client{% endblock %}
 {% load django_tables2 %}
 {% load bootstrap_pagination %}
+{% load crispy_forms_tags %}
+
+
+{% block breadcrumbs %}
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/">Home</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'clients:list_client' %}">Client</a></li>
+        <li class="breadcrumb-item"><a role="link" aria-disabled="true">Outlet-Client</a></li>
+    </ol>
+</nav>
+{% endblock breadcrumbs %}
 
 {% block content %}
 <div class="row">
