--- a/kawn_subscriptions_manager/templates/clients/sales/list_outlet_client.html
+++ b/kawn_subscriptions_manager/templates/clients/sales/list_outlet_client.html
@@ -5,6 +5,17 @@
 {% load django_tables2 %}
 {% load bootstrap_pagination %}
 
+
+{% block breadcrumbs %}
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/">Home</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'clients:list_client' %}">Client</a></li>
+        <li class="breadcrumb-item"><a role="link" aria-disabled="true">Outlet-Client</a></li>
+    </ol>
+</nav>
+{% endblock breadcrumbs %}
+
 {% block content %}
 <div class="row">
     <div class="col-12">
@@ -28,15 +39,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="pull-right">
-                    {% if export_formats %}
-                    {% for format in export_formats %}
-                    <a href="{% export_url format %}" class="btn bg-gradient-faded-light btn-xs text-dark">
-                        download <code>.{{ format }}</code>
-                    </a>
-                    {% endfor %}
-                    {% endif %}
-                </div> -->
             </div>
             <div class="card-body px-0 pt-0 pb-2">
                 <!-- <div class="row">
