--- a/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/sales/list_subscription_plan.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/sales/list_subscription_plan.html
@@ -7,6 +7,16 @@
 {% block menu-title %}List Subscriptions Plan{% endblock %}
 {% block listsubscriptionplan-active %}active{% endblock %}
 
+
+{% block breadcrumbs %}
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/">Home</a></li>
+        <li class="breadcrumb-item"><a role="link" aria-disabled="true">Subscription Plans</a></li>
+    </ol>
+</nav>
+{% endblock breadcrumbs %}
+
 {% block content %}
 <div class="row">
   <div class="col-12">
