--- a/kawn_subscriptions_manager/templates/base.html
+++ b/kawn_subscriptions_manager/templates/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load static i18n compress%}
+{% load view_breadcrumbs %}
 
 <!DOCTYPE html>
 {% get_current_language as LANGUAGE_CODE %}
@@ -19,8 +20,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"
     integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
   <!-- Your stuff: Third-party CSS libraries go here -->
-
   <!-- This file stores project-specific CSS -->
   {% compress css %}
   <link href="{% static 'css/project.css' %}" rel="stylesheet">
@@ -72,6 +73,10 @@
     <!-- Navbar -->
     {% include "partials/navbar.html" %}
     <div class="container-fluid py-4">
+      {% block breadcrumbs %}
+        {% render_breadcrumbs %}
+      {% endblock breadcrumbs %}
+
       {% block content %}
       {% endblock content %}
 
