--- a/kawn_subscriptions_manager/templates/users/profile.html
+++ b/kawn_subscriptions_manager/templates/users/profile.html
@@ -1,44 +1,58 @@
 {% extends "base.html" %}
 {% block title %}Users{% endblock title %}
 {% block profile-active %}active{% endblock %}
+
+
+{% block breadcrumbs %}
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/">Home</a></li>
+        <li class="breadcrumb-item"><a role="link" aria-disabled="true">My Profile</a></li>
+    </ol>
+</nav>
+{% endblock breadcrumbs %}
+
 {% block content %}
 <div class="row">
     <div class="col-xl-12 col-sm-12 mb-xl-0 mb-4">
-        <div class="card">
-            <div class="card-body p-3 mb-xl-12">
-                {% for message in messages %}
-                <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
-                    <strong class="text-white">{{ message }}</strong>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert"
-                        aria-label="Close"><span aria-hidden="true">&times;</span>
-                    </button>
+            <div class="card mb-4">
+                <div class="card-header pb-0 justify-content-lg-between">
+                    <h5 class="font-weight-bolder">My Profile</h5><br>
                 </div>
-                {% endfor %}
-                <h3>Users</h3><br>
-                <table class="table mb-0">
-                    <thead>
-                        <tr class="text-center">
-                            <th>Name</th>
-                            <th>Email</th>
-                            <th>Username</th>
-                            <th>Access</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr class="text-center">
-                            <td>{{ user.name }}</td>
-                            <td>{{ user.email }}</td>
-                            <td>{{ user.username }}</td>
-                            <td>{{ user.type }}</td>
-                            <td>
-                                <a class="btn btn-info bg-gradient-info" href="{% url 'users:update' %}" role="button">My Info</a>
-                                <a class="btn btn-info bg-gradient-info" href="{% url 'account_email' %}" role="button">E-Mail Settings</a>
-                                <a class="btn btn-info bg-gradient-info" href="{% url 'account_change_password' %}" role="button">Change Password</a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="card-body p-3 mb-xl-12">
+                    {% for message in messages %}
+                    <div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
+                        <strong class="text-white">{{ message }}</strong>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert"
+                            aria-label="Close"><span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    {% endfor %}
+                    <table class="table mb-0">
+                        <thead>
+                            <tr class="text-center">
+                                <th>Name</th>
+                                <th>Email</th>
+                                <th>Username</th>
+                                <th>Access</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="text-center">
+                                <td>{{ user.name }}</td>
+                                <td>{{ user.email }}</td>
+                                <td>{{ user.username }}</td>
+                                <td>{{ user.type }}</td>
+                                <td>
+                                    <a class="btn btn-info bg-gradient-info" href="{% url 'users:update' %}" role="button">My Info</a>
+                                    <a class="btn btn-info bg-gradient-info" href="{% url 'account_email' %}" role="button">E-Mail Settings</a>
+                                    <a class="btn btn-info bg-gradient-info" href="{% url 'account_change_password' %}" role="button">Change Password</a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
