--- a/kawn_subscriptions_manager/templates/users/user_list.html
+++ b/kawn_subscriptions_manager/templates/users/user_list.html
@@ -27,7 +27,7 @@
                         <div class="col-md-2 align-middle">
                         <a href="{% url 'users:add_users' %}" class="btn bg-gradient-info mt-2">Add User</a>
                         </div>
-                        <div class="col-md-10 align-middle mt-2">
+                        {% comment %} <div class="col-md-10 align-middle mt-2">
                         {% if view.export_formats %}
                             {% for format in view.export_formats %}
                             <a href="{% export_url format %}" class="btn bg-gradient-faded-light btn-xs text-dark">
@@ -35,21 +35,9 @@
                             </a>
                             {% endfor %}
                         {% endif %}
-                        </div>
+                        </div> {% endcomment %}
                     </div>
                 </div>
-                {% comment %} <a href="{% url 'users:add_users' %}" class="btn bg-gradient-info col-md-2">Add User</a>
-                <div class="col-sm-10 mt-4">
-                    <div class="pull-right">
-                        {% if view.export_formats %}
-                            {% for format in view.export_formats %}
-                            <a href="{% export_url format %}" class="btn bg-gradient-faded-light btn-xs text-dark">
-                                download  <code>.{{ format }}</code>
-                            </a>
-                            {% endfor %}
-                        {% endif %}
-                    </div>
-                </div> {% endcomment %}
             </div>
             <div class="card-body px-0 pt-0 pb-2">
                 <div class="table-responsive p-0">
