--- a/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/list_subscription_plan.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/list_subscription_plan.html
@@ -97,7 +97,7 @@
                   {% if data.is_active %}
                   <p class="text-xs font-weight-bold mb-0">Active</p>
                   {% else %}
-                  <p class="text-xs mb-0">Ongoing</p>
+                  <p class="text-xs mb-0">Not Active</p>
                   {% endif %}
                 </td>
                 <td class="align-middle">
