--- a/kawn_subscriptions_manager/templates/account/login.html
+++ b/kawn_subscriptions_manager/templates/account/login.html
@@ -38,7 +38,7 @@
                             <div class="card card-plain mt-4 shadow-lg">
                                 <div class="card-header pb-0 text-left bg-transparent">
                                     <img src="{% static 'images/kawn_logo.svg' %}" alt="" width="30%"><br>
-                                    <h3 class="font-weight-bolder text-info text-gradient">Subscriptions Manager</h3>
+                                    <h3 class="font-weight-bolder text-info">Subscriptions Manager</h3>
                                     <p class="mb-0">Enter your credentials to login</p>
                                     {% for message in messages %}
                                     <br><div class="alert alert-success alert-dismissible fade show {{ message.tags }}" role="alert">
