--- a/kawn_subscriptions_manager/templates/clients/list_client.html
+++ b/kawn_subscriptions_manager/templates/clients/list_client.html
@@ -101,9 +101,9 @@
                                 </td>
                                 <td class="align-middle text-center text-sm">
                                     <a href="{% url 'clients:list_outlet_client' data.id %}"
-                                        class="badge bg-info">Outlet</a>
+                                        class="btn btn-sm bg-info text-white text-xs">Outlet</a>
                                     <a href="{% url 'clients:update_client' data.id %}"
-                                        class="badge bg-warning">Edit</a>
+                                        class="btn btn-sm bg-warning text-white text-xs">Edit</a>
                                 </td>
                             </tr>
                             {% empty %}
