--- a/kawn_subscriptions_manager/templates/clients/sales/list_outlet.html
+++ b/kawn_subscriptions_manager/templates/clients/sales/list_outlet.html
@@ -100,7 +100,7 @@
                   {% endif %}
                 </td>
                 <td class="align-middle text-center text-sm">
-                  <a href="{% url 'clients:update_outlet' data.id %}" class="badge bg-info">Edit</a>
+                  <a href="{% url 'clients:update_outlet' data.id %}" class="btn btn-sm bg-warning text-white text-xs">Edit</a>
                 </td>
               </tr>
               {% empty %}
