--- a/kawn_subscriptions_manager/templates/clients/sales/list_client.html
+++ b/kawn_subscriptions_manager/templates/clients/sales/list_client.html
@@ -95,14 +95,14 @@
                                 </td>
                                 <td>
                                     <a href="{% url 'clients:list_outlet_client' data.id %}"
-                                        class="badge bg-info">Outlet</a>
+                                        class="btn btn-sm bg-info text-white text-xs">Outlet</a>
                                     <a href="{% url 'clients:update_client' data.id %}"
-                                        class="badge bg-warning">Edit</a>
+                                        class="btn btn-sm bg-warning text-white text-xs">Edit</a>
                                     <form class="d-inline" id="form-id"
                                         action="{% url 'clients:delete_client' data.id %}" method="post">
                                         {% csrf_token %}
                                         </a>
-                                        <button type="submit" class="badge btn-danger btn-flat show_confirm"
+                                        <button type="submit" class="btn btn-sm bg-danger btn-flat show_confirm text-white"
                                             data-toggle="tooltip" title='Delete'>Delete</button>
                                     </form>
                                 </td>
