--- a/kawn_subscriptions_manager/templates/clients/sales/list_outlet_client.html
+++ b/kawn_subscriptions_manager/templates/clients/sales/list_outlet_client.html
@@ -81,12 +81,11 @@
                                     <p class="text-xs font-weight-bold mb-0">{{ data.province_read }}</p>
                                 </td>
                                 <td class="align-middle text-center text-sm">
-                                    <a href="{% url 'clients:update_outlet' data.id %}" class="badge bg-info">Edit</a>
                                     <form class="d-inline" id="form-id"
                                         action="{% url 'clients:delete_outlet_client' data.id %}" method="post">
                                         {% csrf_token %}
                                         </a>
-                                        <button type="submit" class="badge btn-danger btn-flat show_confirm"
+                                        <button type="submit" class="btn btn-sm bg-danger btn-flat show_confirm text-white"
                                             data-toggle="tooltip" title='Delete'>Delete</button>
                                     </form>
                                 </td>
