--- a/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/form_subscription_plan.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/form_subscription_plan.html
@@ -18,8 +18,8 @@
                 {% csrf_token %}
                 <input type="hidden" name="next" value="{{ next }}">
                 {{ form|crispy }}
-                <button type="submit" class="btn bg-gradient-info col-md-2 mt-4 mb-0">SAVE</button>
-                <a href="{% url 'subscriptions:list_subscription_plan'  %}" class="btn bg-gradient-danger col-md-2 mt-4 mb-0">CANCEL</a> 
+                <button type="submit" class="btn bg-info col-md-2 mt-4 mb-0 text-white">SAVE</button>
+                <a href="{% url 'subscriptions:list_subscription_plan'  %}" class="btn bg-danger col-md-2 mt-4 mb-0 text-white">CANCEL</a> 
               </form>
             </div>
           </div>
