--- a/kawn_subscriptions_manager/templates/partials/navbar.html
+++ b/kawn_subscriptions_manager/templates/partials/navbar.html
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li class="nav-item px-3 d-flex align-items-center"></li>
-                <li class="nav-item dropdown pe-2 d-flex align-items-center">
+                <!-- <li class="nav-item dropdown pe-2 d-flex align-items-center">
                     <a href="javascript:;" class="nav-link text-body p-0" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fa fa-bell cursor-pointer"></i>
                     </a>
@@ -88,7 +88,7 @@
                             </a>
                         </li>
                     </ul>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
