--- a/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/sales/list_subscription_plan.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/sales/list_subscription_plan.html
@@ -73,13 +73,13 @@
             <tbody>
               {% for data in object_list %}
               <tr>
-                <td class="px-4">
+                <td data-sort="{{ data.name }}" class="px-4">
                   <p class="text-xs font-weight-bold mb-0">{{ data.name }}</p>
                 </td>
-                <td class="px-4">
+                <td data-sort="{{ data.trial_period }}" class="px-4">
                   <p class="text-xs font-weight-bold mb-0 text-end">{{ data.trial_period|default_if_none:"-" }} Month</p>
                 </td>
-                <td class="px-4">
+                <td data-sort="{{ data.price }}" class="px-4">
                   <p class="text-xs text-end font-weight-bold mb-0">Rp {{ data.price|intcomma }}</p>
                 </td>
                 <td>
