--- a/kawn_subscriptions_manager/templates/clients/sales/list_outlet_client.html
+++ b/kawn_subscriptions_manager/templates/clients/sales/list_outlet_client.html
@@ -31,7 +31,8 @@
                     {% endfor %}
                     <div class="row">
                         <div class="d-inline">
-                            <a href="{% url 'clients:list_client'  %}" class="d-inline"><i class="fa fa-arrow-left" aria-hidden="true"></i></a> 
+                            <a href="{% url 'clients:list_client'  %}" class="d-inline"><i class="fa fa-arrow-left"
+                                    aria-hidden="true"></i></a>
                             <h5 class="font-weight-bolder d-inline p-lg-2">{{ name.name }}'s Outlets</h5>
                         </div>
                         <div>
@@ -85,7 +86,8 @@
                                         action="{% url 'clients:delete_outlet_client' data.id %}" method="post">
                                         {% csrf_token %}
                                         </a>
-                                        <button type="submit" class="btn btn-sm bg-danger btn-flat show_confirm text-white"
+                                        <button type="submit"
+                                            class="btn btn-sm bg-danger btn-flat show_confirm text-white"
                                             data-toggle="tooltip" title='Delete'>Delete</button>
                                     </form>
                                 </td>
@@ -100,6 +102,14 @@
                         </tbody>
                     </table>
                 </div>
+            </div>
+            <div class="card-footer row">
+                <hr>
+                <span class="col-lg-6">{% bootstrap_paginate page_obj show_first_last="true" centered="true" range=1 %}</span>
+                <span class="col-lg-6 text-end text-sm">
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+                </span>
+                <hr>
             </div>
         </div>
     </div>
